Creates HTML update

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -3,4 +3,10 @@
     <head>
         <title>Kimberly World</title>
     </head>
+    <body>
+        
+        <header>
+            <h1>About Me</h1>
+        </header>
+    </body>
 </html>
