Creates HTML change

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -4,9 +4,10 @@
         <title>Kimberly World</title>
     </head>
     <body>
-        
+
         <header>
             <h1>About Me</h1>
         </header>
+        <p> To start, I want to apologize for the late submission. Long story short I had covid and I wasn't able to complete it on time. On that note, I guess the first thing about me I'll address is that I have a weak immune system <em> ba dum tss!</em> Okay enough of the lame jones, let me continue. I'm aware this propbably won't be marked but I Wanted to do it anyways. Thanks!</p>
     </body>
 </html>
