--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -8,6 +8,25 @@
         <header>
             <h1>About Me</h1>
         </header>
-        <p> To start, I want to apologize for the late submission. Long story short I had covid and I wasn't able to complete it on time. On that note, I guess the first thing about me I'll address is that I have a weak immune system <em> ba dum tss!</em> Okay enough of the lame jones, let me continue. I'm aware this propbably won't be marked but I Wanted to do it anyways. Thanks!</p>
+        <hr>
+        <section> 
+        <p> To start, I want to apologize for the late submission. Long story short I had covid and I wasn't able to complete it on time. I drank a bunch of H<sub>2</sub>0, which helped a bunch! Super random addition but that subscript had to come in somewhere. On that note, I guess the first thing about me I'll address is that I have a <abbr title=""> very</abbr> weak immune system <em> 'ba dum tss!'</em> Okay enough of the lame jones, let me continue. I did a tad bit of HTML in my tumblr days, not as extreme as this but I digress. I always wanted to further my curiosity with coding so I'm very excited to be apart of your class even if my weak immune system got in the way. I can't wait to learn more from you!</p>
+
+        <p>I'm aware this propbably won't be marked but I wanted to do it anyways. Thanks!</p>
+        <blockquote>
+            In the race of life, the tortoise beats the hare everytime.
+           <br> <cite>Aespo</cite>
+        </blockquote>
+       </section>
     </body>
 </html>
+<footer>
+    Kimberly World
+</footer>
+<footer>
+    Aka worl007
+</footer>
+<footer>
+    Aka tortoise who beats the hare everytime
+</footer>
+<mark> THANK YOU </mark>
