Creates HTML changes

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html> 
     <head>
         <title>Kimberly World</title>
     </head>
@@ -9,9 +9,10 @@
             <h1>About Me</h1>
         </header>
         <hr>
-        <section> 
+        <section>
+            <h2> My Little Parahraph </h2>
         <p> To start, I want to apologize for the late submission. Long story short I had covid and I wasn't able to complete it on time. I drank a bunch of H<sub>2</sub>0, which helped a bunch! Super random addition but that subscript had to come in somewhere. On that note, I guess the first thing about me I'll address is that I have a <abbr title=""> very</abbr> weak immune system <em> 'ba dum tss!'</em> Okay enough of the lame jones, let me continue. I did a tad bit of HTML in my tumblr days, not as extreme as this but I digress. I always wanted to further my curiosity with coding so I'm very excited to be apart of your class even if my weak immune system got in the way. I can't wait to learn more from you!</p>
-
+        </section> 
         <p>I'm aware this propbably won't be marked but I wanted to do it anyways. Thanks!</p>
         <blockquote>
             In the race of life, the tortoise beats the hare everytime.
@@ -19,7 +20,7 @@
         </blockquote>
        </section>
     </body>
-</html>
+
 <footer>
     Kimberly World
 </footer>
@@ -29,4 +30,10 @@
 <footer>
     Aka tortoise who beats the hare everytime
 </footer>
-<mark> THANK YOU </mark>
+<mark>THANK YOU</mark> 
+
+<h3>Look at this cutie looking at the moon!! ALSO take a look at my next <a href="notes.html">page</a>
+<section>
+    <img src="images/kitty.jpg">
+</section>
+</html>
