--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
+
 <html> 
     <head>
-        <title>Kimberly World</title>
+   <title>Kimberly World</title> 
+            
+        <link href="css/main.css" rel="stylesheet">
+        
     </head>
     <body>
 
         <header>
-            <h1>About Me</h1>
+            <h1 class="site-title">About Me</h1>
         </header>
         <hr>
         <section>
-            <h2> My Little Parahraph </h2>
+            <h2> My Little Paragraph </h2>
         <p> To start, I want to apologize for the late submission. Long story short I had covid and I wasn't able to complete it on time. I drank a bunch of H<sub>2</sub>0, which helped a bunch! Super random addition but that subscript had to come in somewhere. On that note, I guess the first thing about me I'll address is that I have a <abbr title=""> very</abbr> weak immune system <em> 'ba dum tss!'</em> Okay enough of the lame jones, let me continue. I did a tad bit of HTML in my tumblr days, not as extreme as this but I digress. I always wanted to further my curiosity with coding so I'm very excited to be apart of your class even if my weak immune system got in the way. I can't wait to learn more from you!</p>
         </section> 
         <p>I'm aware this propbably won't be marked but I wanted to do it anyways. Thanks!</p>
@@ -32,8 +36,15 @@
 </footer>
 <mark>THANK YOU</mark> 
 
-<h3>Look at this cutie looking at the moon!! ALSO take a look at my next <a href="notes.html">page</a>
+<h3>My Hobbies</h3>
+<ul>
+    <li>Writing</li>
+    <li>Painting</li>
+</ul>
+
+<h3>Look at this cutie looking at the moon!! ALSO take a look at my next 
+   <a class="border" href="notes.html">page</a>
 <section>
-    <img src="images/kitty.jpg">
+    <img src="images/kitty.jpg" id="my-image"
 </section>
 </html>
