--- a/final-project/index.html
+++ b/final-project/index.html
@@ -5,8 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MTM6130 Final Project - worl0007</title>
+    <script src="https://kit.fontawesome.com/74927e85dd.js" crossorigin="anonymous"></script>
     <link href="css/styles.css" rel="stylesheet">
 <body>
-    <h1>Github Test</h1>
+    <header>
+        <div class="container">
+            <img src="images/logo.png" alt="logo" class="logo">
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Team</a></li>
+                    <li><a href="#">Contact</a></li> 
+                </ul>
+            </nav>
+        </div>
+        <form class="example" action="action_page.php">
+            <input type="text" placeholder="Search.." name="search">
+            <button type="submit"><i class="fa fa-search"></i></button>
+          </form>
+        <div class="container">
+            <img src="images/main-banner.jpg" alt="banner" class="banner">
+            <div class="text-block">
+                <h1>Welcome to Star Media</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus possimus iste accusantium similique, architecto ipsam iure, magnam temporibus sed quibusdam reiciendis, amet corrupti tenetur officia ut perspiciatis nihil repellat consequuntur.</p>
+            </div>
+        </div>
+  
+     
+    </header>
+    
 </body>
 </html>
