--- a/final-project/index.html
+++ b/final-project/index.html
@@ -77,7 +77,7 @@
                 </div>
 
                 <div class="col-3">
-                    <img src="images" alt="">
+                    <img src="images/marketing.jpg" alt="">
                     <h3>Web Develoment</h3>
                     <p>Lorem ipsum dolor sit amet consectetur,<br> adipisicpedit quae suscipit i </p>
                     <a href="">Web Plans</a>
