--- a/final-project/index.html
+++ b/final-project/index.html
@@ -135,7 +135,7 @@
             <div class="row">
                 
                 <div class="col-2">
-                    <h3>Send us a message</h3>
+                    <h3>Send Us a Message</h3>
                     <form action="" class="my-form">
                         <div class="form-grup">
                             <label for="">Name</label><br>
@@ -160,7 +160,7 @@
         </div>
 
         <div class="tabil">
-            <h2>Hours of operation</h2>
+            <h2>Hours of Operation</h2>
             <div class="row">
                 <div class="col-2">
                     <h6>Days</h6>
